# TTS-Server

./: .dockerignore  .gitignore  README.md  client.html  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile.server  Dockerfile.server_pixi
tts_server/: cli.py  client.py  client_here.py  server.py
